--- a/pom.xml
+++ b/pom.xml
@@ -17,32 +17,10 @@
   </properties>
 
   <dependencies>
-    <!--        <dependency>-->
-    <!--            <groupId>javax.servlet</groupId>-->
-    <!--            <artifactId>javax.servlet-api</artifactId>-->
-    <!--            <version>3.1.0</version>-->
-    <!--            <type>jar</type>-->
-    <!--            <scope>provided</scope>-->
-    <!--        </dependency>-->
-    <!--        <dependency>-->
-    <!--            <groupId>org.eclipse.jetty.websocket</groupId>-->
-    <!--            <artifactId>websocket-servlet</artifactId>-->
-    <!--            <version>9.4.1.v20170120</version>-->
-    <!--        </dependency>-->
     <dependency>
       <groupId>com.google.cloud</groupId>
       <artifactId>google-cloud-speech</artifactId>
       <version>1.20.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty.websocket</groupId>
-      <artifactId>websocket-client</artifactId>
-      <version>${jetty.maven.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -50,6 +28,11 @@
       <version>3.1.0</version>
       <type>jar</type>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty.websocket</groupId>
+      <artifactId>websocket-client</artifactId>
+      <version>${jetty.maven.version}</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty.websocket</groupId>
@@ -87,6 +70,12 @@
         <configuration>
           <mainClass>com.google.jtangney.subtitling.client.Main</mainClass>
           <cleanupDaemonThreads>false</cleanupDaemonThreads>
+          <systemProperties>
+            <systemProperty>
+              <key>socketServer</key>
+              <value>${server.host}</value>
+            </systemProperty>
+          </systemProperties>
         </configuration>
       </plugin>
     </plugins>
@@ -100,6 +89,8 @@
       </activation>
       <properties>
         <packaging.type>jar</packaging.type>
+        <server.host>localhost:8080</server.host>
+<!--        <server.host>35.244.194.43:80</server.host>-->
       </properties>
     </profile>
     <profile>
