--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
     <jetty.maven.version>9.4.21.v20190926</jetty.maven.version>
     <failOnMissingWebXml>false</failOnMissingWebXml>
   </properties>
@@ -39,12 +39,60 @@
       <artifactId>websocket-servlet</artifactId>
       <version>${jetty.maven.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.4</version>
+    </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>3.1.0</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-logging</artifactId>
+      <version>1.98.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>1.7.28</version>
+    </dependency>
   </dependencies>
 
   <build>
     <!-- for hot reload of the web application -->
     <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
     <plugins>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>1.7.0</version>
+        <configuration>
+          <from>
+            <image>${base.image.name}</image>
+          </from>
+          <container>
+            <!-- TODO: figure out args better! -->
+            <jvmFlags>
+              <jvmFlag>-Dredis.host=10.73.51.12</jvmFlag>
+            </jvmFlags>
+            <args>
+              <arg>-Dredis.host=10.73.51.12</arg>
+            </args>
+            <!-- For WAR packing (ingestor) only  -->
+            <appRoot>/var/lib/jetty/webapps/app</appRoot>
+            <!-- For JAR packing (transcriber) only  -->
+            <mainClass>com.google.jtangney.subtitling.transcribe.Main</mainClass>
+          </container>
+          <to>
+            <image>eu.gcr.io/jtgcp-subtitles/${out.image.name}</image>
+          </to>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
@@ -68,13 +116,9 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>com.google.jtangney.subtitling.client.Main</mainClass>
+          <mainClass>com.google.jtangney.subtitling.transcribe.Main</mainClass>
           <cleanupDaemonThreads>false</cleanupDaemonThreads>
           <systemProperties>
-            <systemProperty>
-              <key>socketServer</key>
-              <value>${server.host}</value>
-            </systemProperty>
           </systemProperties>
         </configuration>
       </plugin>
@@ -83,26 +127,22 @@
 
   <profiles>
     <profile>
-      <id>client-local</id>
+      <id>ingest</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <packaging.type>jar</packaging.type>
-        <server.host>localhost:8080</server.host>
-      </properties>
-    </profile>
-    <profile>
-      <id>client-remote</id>
-      <properties>
-        <packaging.type>jar</packaging.type>
-        <server.host>35.244.194.43:80</server.host>
-      </properties>
-    </profile>
-    <profile>
-      <id>server</id>
-      <properties>
         <packaging.type>war</packaging.type>
+        <base.image.name>jetty:9.4-jre11</base.image.name>
+        <out.image.name>subtitling-ingest</out.image.name>
+      </properties>
+    </profile>
+    <profile>
+      <id>transcribe</id>
+      <properties>
+        <packaging.type>jar</packaging.type>
+        <base.image.name>gcr.io/distroless/java:11</base.image.name>
+        <out.image.name>subtitling-transcribe</out.image.name>
       </properties>
     </profile>
   </profiles>
