--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,24 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/subtitling-ingest', './ingest' ]
+    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/subtitling-ingest', './ingest' ]
     waitFor: ['-']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/leader-elector', './election' ]
+    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/leader-elector', './election' ]
     waitFor: ['-']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/subtitling-transcribe', './transcribe' ]
+    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/subtitling-transcribe', './transcribe' ]
     waitFor: ['-']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/subtitling-editor', './ui' ]
+    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/subtitling-editor', './ui' ]
     waitFor: ['-']
 
 images: [
-  'gcr.io/$PROJECT_ID/subtitling-ingest',
-  'gcr.io/$PROJECT_ID/leader-elector',
-  'gcr.io/$PROJECT_ID/subtitling-transcribe'
-  'gcr.io/$PROJECT_ID/subtitling-editor'
+  'eu.gcr.io/$PROJECT_ID/subtitling-ingest',
+  'eu.gcr.io/$PROJECT_ID/leader-elector',
+  'eu.gcr.io/$PROJECT_ID/subtitling-transcribe',
+  'eu.gcr.io/$PROJECT_ID/subtitling-editor'
 ]
 
