--- a/k8s/ingestor.yaml
+++ b/k8s/ingestor.yaml
@@ -17,7 +17,7 @@ spec:
         - name: ingestor
           image: eu.gcr.io/jtgcp-subtitles/subtitling-ingest:latest
           args:
-            - --redisHost=10.73.51.12
+            - --redisHost=10.226.1.220
             - --host=0.0.0.0
           ports:
             - containerPort: 8080
@@ -35,3 +35,4 @@ spec:
       port: 80
       targetPort: 8080
   type: LoadBalancer
+  sessionAffinity: ClientIP
