--- a/k8s/reviewer.yaml
+++ b/k8s/reviewer.yaml
@@ -36,7 +36,7 @@ metadata:
   name: reviewer-service
 spec:
   selector:
-    app: editor
+    app: reviewer
   ports:
     - protocol: TCP
       port: 80
