--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,24 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/ingestor', './ingest' ]
+    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/ingestor', './ingest' ]
     waitFor: ['-']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/leader-election', './election' ]
+    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/leader-election', './election' ]
     waitFor: ['-']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/transcriber', './transcribe' ]
+    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/transcriber', './transcribe' ]
     waitFor: ['-']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/reviewer', './reviewer' ]
+    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/reviewer', './reviewer' ]
     waitFor: ['-']
 
 images: [
-  'eu.gcr.io/$PROJECT_ID/ingestor',
-  'eu.gcr.io/$PROJECT_ID/leader-election',
-  'eu.gcr.io/$PROJECT_ID/transcriber',
-  'eu.gcr.io/$PROJECT_ID/reviewer'
+  'gcr.io/$PROJECT_ID/ingestor',
+  'gcr.io/$PROJECT_ID/leader-election',
+  'gcr.io/$PROJECT_ID/transcriber',
+  'gcr.io/$PROJECT_ID/reviewer'
 ]
 
